--- a/Projet Maquette Bootstrap/HTML/index.html
+++ b/Projet Maquette Bootstrap/HTML/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="../CSS/css/bootstrap.css" rel="stylesheet">
     <link href="../CSS/main.css" rel="stylesheet">
     <title>Apptastico</title>
@@ -12,27 +13,27 @@
     <header class="Bg-Header ">
         <div class="container">
             <div class="row ">
-                <div class="col-md-8">
+                <div class="col-md-8 MenuNav">
                     <img src="../IMAGES/Apptastico_logo.png">
                 </div>
-                <div class="col-md-1 color0 FontHelv100 FontSize25px">
+                <div class="col-md-1 col-sm-2 color0 FontHelv100 FontSize25px">
                     <button type="button" class="btn btn-secondary Bg_Button Button_BorderN BorderR">Home</button>
                 </div>
-                <div class="col-md-1 color0 FontHelv100 FontSize25px">
+                <div class="col-md-1 col-sm-2 color0 FontHelv100 FontSize25px">
                     <button type="button" class="btn btn-secondary Bg_Button Button_BorderN BorderR">About</button>
                 </div>
-                <div class="col-md-1 color0 FontHelv100 FontSize25px">
+                <div class="col-md-1 col-sm-2 color0 FontHelv100 FontSize25px">
                     <button type="button" class="btn btn-secondary Bg_Button Button_BorderN BorderR">Work</button>
                 </div>
-                <div class="col-md-1 color0 FontHelv100 FontSize25px">
+                <div class="col-md-1 col-sm-2 color0 FontHelv100 FontSize25px">
                     <button type="button" class="btn btn-secondary Bg_Button Button_BorderN BorderR">Contact</button>
                 </div>
             </div>
             <div class="row MarginTop65px">
-                <div class="col-md-5">
+                <div class="col-md-5 Iphone">
                     <img src="../IMAGES/Iphone.png">
                 </div>
-                <div class="col-md-7 PaddingT50px">
+                <div class="col-md-7 col-sm-7 PaddingT50px">
                     <h1 class="color0 ">We design iOS apps</h1>
                     <span class="color1 FontSize15px "> Ut in Nulla Enim. Phasellus Molestie Magna Non Est Bibendum</span>
                     <span class="color1 FontSize15px ">Non Venenatis Ut In Nulla Enim. Phasellus Molestie</span>
@@ -48,35 +49,33 @@
             </div>
         </div>
     </header>
-    <main class="Bg-Pub">
-        <div class="container-fluid">
-            <div class="container">
-                <div class="row justify-content-around">
-                    <div class="col-md-2 PaddingT10px">
-                        <img src="../IMAGES/Pub_1.png">
-                    </div>
-                    <div class="col-md-2 PaddingT10px">
-                        <img src="../IMAGES/Pub_2.png">
-                    </div>
-                    <div class="col-md-2 PaddingT10px">
-                        <img src="../IMAGES/Pub_3.png">
-                    </div>
-                    <div class="col-md-2 PaddingT10px">
-                        <img src="../IMAGES/Pub_4.png">
-                    </div>
-                    <div class="col-md-2 PaddingT10px">
-                        <img src="../IMAGES/Pub_5.png">
-                    </div>
+    <div class="container-fluid  Bg-Pub Pub">
+        <div class="container">
+            <div class="row justify-content-around">
+                <div class="col-md-2 PaddingT10px">
+                    <img src="../IMAGES/Pub_1.png">
+                </div>
+                <div class="col-md-2 PaddingT10px">
+                    <img src="../IMAGES/Pub_2.png">
+                </div>
+                <div class="col-md-2 PaddingT10px">
+                    <img src="../IMAGES/Pub_3.png">
+                </div>
+                <div class="col-md-2 PaddingT10px">
+                    <img src="../IMAGES/Pub_4.png">
+                </div>
+                <div class="col-md-2 PaddingT10px">
+                    <img src="../IMAGES/Pub_5.png">
                 </div>
             </div>
         </div>
-    </main>
+    </div>
     <div class="container">
         <div class="row MarginTop50px">
         </div>
         <div class="container">
-            <div class="row PaddingT50px">
-                <div class="col-4 TxtCenter">
+            <div class="row PaddingT50px FDC">
+                <div class="col-md-4 TxtCenter">
                     <img src="../IMAGES/Picto_Iphone.png" width="150px" height="150px">
                     <p class="FontSize25px">Engaging interfaces</p>
                     <p class="FontSize15px">You sold a gun to a murderer so you could play video games? God-damn! It's
@@ -85,14 +84,14 @@
                         Look it up.</p>
                     <button type="button" class="ButtonRead">Read more</button>
                 </div>
-                <div class="col-4 TxtCenter ">
+                <div class="col-md-4 TxtCenter ">
                     <img src="../IMAGES/Picto_Flacon.png" width="150px" height="150px">
                     <p class="FontSize25px">Usable designs</p>
                     <p class="FontSize15px">Take it to the shit store and sell it, or put it in a shit museum. I don't
                         care what you do, you just gotta get it together... Get your shit together.</p>
                     <button type="button" class="ButtonRead">Read more</button>
                 </div>
-                <div class="col-4 TxtCenter">
+                <div class="col-md-4 TxtCenter">
                     <img src="../IMAGES/Picto_Engrenage.png" width="150px" height="150px">
                     <p class="FontSize25px">Solid development</p>
                     <p class="FontSize15px">Nice, Mrs Pancakes. Real nice. Awww, bitch! Awwww thanks, bitch! The trick
@@ -125,14 +124,12 @@
             </div>
             <div class="container">
                 <div class="row  MarginTop65px">
-                    <div class="col-md-6">
+                    <div class="col-md-2">
                         <p>
                             <img src="../IMAGES/Wifi_Logo.png" />From our blog
                         </p>
                     </div>
-                    <div class="col-md-6">
-                        <img src="../IMAGES/Twitter_Logo.png">Our Twitter feed
-                    </div>
+
                 </div>
                 <div class="container">
                     <div class="row">
@@ -162,6 +159,9 @@
                             </div>
                         </div>
                         <div class="col-md-6 ">
+                            <div class="col-md-6">
+                                <img src="../IMAGES/Twitter_Logo.png">Our Twitter feed
+                            </div>
                             <div>
                                 <p>@Apptastico: From <a href="http://loremricksum.com/">Loremricksum :</a> You sold a
                                     gun
@@ -204,6 +204,7 @@
                         </div>
                     </div>
                 </footer>
+                <script src="../JS/js/bootstrap.js"></script>
 </body>
 
 </html>
